[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
rust-version = "1.81"
authors = ["clabby", "refcell"]
repository = "https://github.com/anton-rs/kona"
homepage = "https://github.com/anton-rs/kona"
keywords = ["ethereum", "optimism", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["**/target"]

[workspace]
members = ["crates/*", "bin/*"]
default-members = ["bin/host", "bin/client"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
needless-return = "allow" # Temporary fix since this is breaking in nightly clippy
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true

[profile.dev-client]
inherits = "dev"
panic = "abort"

[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"

[workspace.dependencies]
# Workspace
kona-client = { path = "bin/client", version = "0.1.0" }
kona-mpt = { path = "crates/mpt", version = "0.0.3" }
kona-common = { path = "crates/common", version = "0.0.3" }
kona-preimage = { path = "crates/preimage", version = "0.0.3" }
kona-executor = { path = "crates/executor", version = "0.0.2" }
kona-common-proc = { path = "crates/common-proc", version = "0.0.3" }
kona-derive = { path = "crates/derive", version = "0.0.3", default-features = false }
kona-primitives = { path = "crates/primitives", version = "0.0.2", default-features = false }
kona-providers = { path = "crates/providers", version = "0.0.1" }
kona-providers-alloy = { path = "crates/providers-alloy", version = "0.0.1", default-features = false }

# General
anyhow = { version = "1.0.89", default-features = false }
noerror = { version = "1.0.64", default-features = false }
cfg-if = "1.0.0"
spin = { version = "0.9.8", features = ["mutex"] }
lru = "0.12.4"
async-trait = "0.1.83"
lazy_static = "1.5.0"
reqwest = "0.12"
os_pipe = "1.2.1"
actix-web = "4.9.0"
rand = "0.8.5"
futures = { version = "0.3.30", default-features = false }
prometheus = { version = "0.13.4", features = ["process"] }
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5.19", features = ["derive", "env"] }
sha2 = { version = "0.10.8", default-features = false }
c-kzg = { version = "1.0.3", default-features = false }
alloc-no-stdlib = "2.0.4"
linked_list_allocator = "0.10.5"
command-fds = { version = "0.3", features = ["tokio"] }
derive_more = { version = "1.0.0", default-features = false, features = ["full"] }

# Tracing
tracing = { version = "0.1.40", default-features = false }
tracing-loki = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }

# Encoding
miniz_oxide = "0.8.0"
brotli = { version = "7.0.0", default-features = false }

# Testing
proptest = "1.5"
criterion = { version = "0.5.1", features = ["html_reports"] }
pprof = { version = "0.13.0", features = ["criterion", "flamegraph", "frame-pointer"] } 

# Serialization
rkyv = "0.8.8"
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.128", default-features = false }

# Ethereum
unsigned-varint = "0.8.0"
revm = { version = "14.0.3", default-features = false }

# Optimism
superchain = { version = "0.7", default-features = false }

# K/V database
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }

# Alloy
alloy-rlp = { version = "0.3.8", default-features = false }
alloy-trie = { version = "0.6.0", default-features = false }
alloy-eips = { version = "0.4.2", default-features = false }
alloy-provider = { version = "0.4.2", default-features = false }
alloy-primitives = { version = "0.8", default-features = false }
alloy-consensus = { version = "0.4.2", default-features = false }
alloy-transport = { version = "0.4.2", default-features = false }
alloy-rpc-types = { version = "0.4.2", default-features = false }
alloy-rpc-client = { version = "0.4.2", default-features = false }
alloy-rpc-types-engine = { version = "0.4.2", default-features = false }
alloy-node-bindings = { version = "0.4.2", default-features = false }
alloy-transport-http = { version = "0.4.2", default-features = false }

# OP Alloy
op-alloy-consensus = { version = "0.4.0", default-features = false }
op-alloy-protocol = { version = "0.4.0", default-features = false }
op-alloy-genesis = { version = "0.4.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.4.0", default-features = false }
