[package]
name = "kona-common-proc"
description = "Proc macro extension for the `kona-common` crate."
version = "0.0.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
# General
anyhow.workspace = true
cfg-if.workspace = true

# Workspace
kona-common.workspace = true

# Proc Macros
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
