[package]
name = "kona-common"
description = "Common traits and system interfaces for developing client programs on top of Fault Proof VMs."
version = "0.0.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# workspace
anyhow.workspace = true
cfg-if.workspace = true

# external
linked_list_allocator = "0.10.5"
