[package]
name = "kona-common"
description = "Common traits and system interfaces for developing client programs on top of Fault Proof VMs."
version = "0.0.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
noerror.workspace = true
cfg-if.workspace = true
linked_list_allocator.workspace = true
