[package]
name = "kona-common"
description = "Common traits and system interfaces for developing client programs on top of Fault Proof VMs."
version = "0.0.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
cfg-if.workspace = true
derive_more = { workspace = true, features = ["full"] }
linked_list_allocator.workspace = true
