[package]
name = "kona-derive-alloy"
description = "An alloy-backed derivation pipeline for the OP Stack, built on `kona-derive`"
version = "0.0.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-transport.workspace = true
alloy-eips = { workspace = true, features = ["kzg"] }
alloy-rlp = { workspace = true, features = ["derive"] }
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-consensus = { workspace = true, features = ["k256", "serde", "std"] }
alloy-primitives = { workspace = true, features = ["rlp", "k256", "serde"] }
alloy-rpc-types-beacon.workspace = true

# OP Alloy
op-alloy-consensus = { workspace = true, features = ["k256"] }
op-alloy-genesis = { workspace = true, features = ["serde", "std"] }
op-alloy-protocol = { workspace = true, features = ["serde", "std"] }

# General
lru.workspace = true
serde.workspace = true
reqwest.workspace = true
tracing.workspace = true
alloy-serde.workspace = true
async-trait.workspace = true
derive_more = { workspace = true, features = ["full"] }

# Workspace
kona-derive = { workspace = true, features = ["serde"] }

# `test-utils` feature dependencies
alloy-rpc-client = { workspace = true, optional = true }
alloy-node-bindings = { workspace = true, optional = true }
alloy-transport-http = { workspace = true, optional = true, features = ["reqwest"] }

[dev-dependencies]
derive_more = { workspace = true, features = ["full"] }
serde_json.workspace = true
alloy-rpc-client.workspace = true
alloy-node-bindings.workspace = true
alloy-transport-http.workspace = true
tokio = { workspace = true, features = ["full"] }
kona-derive = { workspace = true, features = ["serde", "test-utils"] }

[features]
default = []
test-utils = [
  "dep:alloy-rpc-client",
  "dep:alloy-node-bindings",
  "dep:alloy-transport-http",
  "kona-derive/test-utils",
]
