[package]
name = "kona-derive"
description = "A no_std derivation pipeline implementation for the OP Stack"
version = "0.0.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-eips.workspace = true
alloy-rlp = { workspace = true, features = ["derive"] }
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-primitives = { workspace = true, features = ["rlp", "k256", "map"] }
alloy-rpc-types-engine.workspace = true
op-alloy-consensus = { workspace = true, features = ["k256"] }
op-alloy-protocol.workspace = true
op-alloy-genesis.workspace = true
op-alloy-rpc-types-engine.workspace = true

# General
unsigned-varint.workspace = true
miniz_oxide.workspace = true
brotli.workspace = true
alloc-no-stdlib.workspace = true
noerror.workspace = true
tracing.workspace = true
async-trait.workspace = true

# Workspace
kona-providers.workspace = true
kona-primitives.workspace = true

# `serde` feature dependencies
serde = { workspace = true, optional = true }

# `metrics` feature dependencies
lazy_static = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }

# `test-utils` feature dependencies
spin = { workspace = true, optional = true }
alloy-rpc-client = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
alloy-node-bindings = { workspace = true, optional = true }
alloy-transport-http = { workspace = true, optional = true } 
anyhow = { workspace = true, optional = true }

[dev-dependencies]
spin.workspace = true
anyhow.workspace = true
alloy-rpc-client.workspace = true
alloy-transport-http.workspace = true
alloy-primitives = { workspace = true, features = ["rlp", "k256", "map", "arbitrary"] }
tokio.workspace = true
proptest.workspace = true
tracing-subscriber.workspace = true
alloy-node-bindings.workspace = true
serde_json.workspace = true
kona-providers = { workspace = true, features = ["test-utils"] }

[features]
default = ["serde"]
metrics = [
  "dep:prometheus",
  "dep:lazy_static",
]
serde = [
  "dep:serde",
  "kona-primitives/serde",
  "alloy-primitives/serde",
  "alloy-consensus/serde",
  "op-alloy-consensus/serde",
  "op-alloy-protocol/serde",
  "op-alloy-genesis/serde",
  "op-alloy-rpc-types-engine/serde",
]
test-utils = [
  "dep:spin",
  "dep:anyhow",
  "dep:alloy-transport-http",
  "dep:alloy-node-bindings",
  "dep:tracing-subscriber",
  "dep:alloy-rpc-client",
  "kona-providers/test-utils",
  "alloy-transport-http/reqwest"
]
