[package]
name = "kona-derive"
description = "A no_std derivation pipeline implementation for the OP Stack"
version = "0.2.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Maili
maili-rpc.workspace = true
maili-genesis.workspace = true
maili-protocol.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rlp = { workspace = true, features = ["derive"] }
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-primitives = { workspace = true, features = ["rlp", "k256", "map"] }

# Op Alloy
op-alloy-rpc-types-engine.workspace = true
op-alloy-consensus = { workspace = true, features = ["k256"] }

# General
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true

# `test-utils` feature dependencies
spin = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["fmt"] }

[dev-dependencies]
spin.workspace = true
proptest.workspace = true
serde_json.workspace = true
maili-registry.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
tracing = { workspace = true, features = ["std"] }
alloy-primitives = { workspace = true, features = ["rlp", "k256", "map", "arbitrary"] }

[features]
default = []
serde = [
  "maili-protocol/serde",
  "maili-genesis/serde",
  "alloy-primitives/serde",
  "alloy-consensus/serde",
  "op-alloy-consensus/serde",
  "op-alloy-rpc-types-engine/serde",
]
test-utils = [
  "dep:spin",
  "dep:tracing-subscriber",
]
