[package]
name = "kona-driver"
description = "A no_std derivation pipeline driver"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
kona-derive.workspace = true

# Alloy
alloy-rlp.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true

# OP Alloy
op-alloy-genesis.workspace = true
op-alloy-protocol.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true

# Misc
tracing.workspace = true
thiserror .workspace = true
async-trait.workspace = true
