[package]
name = "kona-driver"
description = "A no_std derivation pipeline driver"
version = "0.2.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
kona-derive.workspace = true

# Maili
maili-genesis.workspace = true
maili-protocol.workspace = true

# Alloy
alloy-rlp.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true

# OP Alloy
op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true

# Misc
async-trait.workspace = true
spin.workspace = true
thiserror .workspace = true
tracing.workspace = true

# `serde` feature dependencies
serde = { workspace = true, optional = true }

# `std` feature dependencies
tokio = { workspace = true, features = ["full"], optional = true }

[features]
default = ["serde"]
std = ["dep:tokio"]
serde = ["dep:serde"]
