[package]
name = "kona-driver"
description = "A no_std derivation pipeline driver"
version = "0.2.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
kona-derive.workspace = true

# Maili
maili-rpc.workspace = true
maili-genesis.workspace = true
maili-protocol.workspace = true

# Alloy
alloy-rlp.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true

# OP Alloy
op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true

# Misc
async-trait.workspace = true
spin.workspace = true
thiserror .workspace = true
tracing.workspace = true
