[package]
name = "kona-executor"
description = "An no_std implementation of a stateless L2 block executor for the OP Stack."
version = "0.0.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
kona-mpt.workspace = true

# Alloy
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-eips.workspace = true
alloy-rlp.workspace = true

# Op Alloy
op-alloy-consensus.workspace = true
op-alloy-genesis.workspace = true
op-alloy-rpc-types-engine.workspace = true

# Revm
revm = { workspace = true, features = ["optimism"] }

# General
derive_more = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
anyhow.workspace = true
alloy-rlp.workspace = true
serde_json.workspace = true
alloy-rpc-types-engine.workspace = true
serde = { workspace = true, features = ["derive"] }
criterion = { workspace = true, features = ["html_reports"] }
pprof = { workspace = true, features = ["criterion", "flamegraph", "frame-pointer"] }

[[bench]]
name = "execution"
harness = false
