[package]
name = "kona-executor"
description = "An no_std implementation of a stateless L2 block executor for the OP Stack."
version = "0.2.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
kona-mpt.workspace = true

# Maili
maili-genesis = { workspace = true, features = ["revm"] }

# Alloy
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-trie.workspace = true

# Op Alloy
op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine = { workspace = true, features = ["serde"] }

# Revm
revm = { workspace = true, features = ["optimism"] }

# General
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
alloy-rlp.workspace = true
serde_json.workspace = true
alloy-rpc-types-engine.workspace = true
serde = { workspace = true, features = ["derive"] }
criterion = { workspace = true, features = ["html_reports"] }
pprof = { workspace = true, features = ["criterion", "flamegraph", "frame-pointer"] }
tokio = { workspace = true, features = ["full"] }
rstest.workspace = true
maili-registry.workspace = true
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-rpc-client.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true
kona-host.workspace = true
tempfile.workspace = true
