[package]
name = "kona-interop"
description = "OP Stack Interop core functionality and primitives"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# General
thiserror.workspace = true
serde = { workspace = true, optional = true, features = ["derive", "alloc"] }
async-trait.workspace = true
tracing.workspace = true

# Alloy
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-sol-types = "0.8.14"
alloy-consensus.workspace = true
alloy-rlp.workspace = true
op-alloy-consensus.workspace = true

# Arbitrary
arbitrary = { version = "1.4", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
alloy-primitives = { workspace = true, features = ["rlp", "arbitrary"] }
arbitrary = { version = "1.4", features = ["derive"] }
rand.workspace = true

[features]
arbitrary = ["dep:arbitrary", "alloy-primitives/arbitrary"]
