[package]
name = "kona-interop"
description = "Core functionality and primitives for the Interop feature of the OP Stack."
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# General
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true

# Alloy
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-sol-types.workspace = true
alloy-consensus.workspace = true
alloy-rlp.workspace = true
op-alloy-consensus.workspace = true

# Arbitrary
arbitrary = { version = "1.4", features = ["derive"], optional = true }

# Serde
serde = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
alloy-primitives = { workspace = true, features = ["rlp", "arbitrary"] }
arbitrary = { version = "1.4", features = ["derive"] }
rand.workspace = true

[features]
arbitrary = ["dep:arbitrary", "alloy-primitives/arbitrary"]
serde = ["dep:serde", "alloy-primitives/serde"]
