[package]
name = "kona-mpt"
description = "Utilities for interacting with and iterating through a merkle patricia trie"
version = "0.0.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# General
tracing.workspace = true
noerror.workspace = true
derive_more.workspace = true

# Revm + Alloy
revm.workspace = true
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-rlp.workspace = true
alloy-consensus.workspace = true
alloy-trie.workspace = true

[dev-dependencies]
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
futures.workspace = true
tracing-subscriber.workspace = true

alloy-consensus.workspace = true
alloy-provider.workspace = true
alloy-rpc-types = { workspace = true, features = ["eth"] }
alloy-transport-http.workspace = true

rand.workspace = true
proptest.workspace = true
criterion.workspace = true
pprof.workspace = true

[[bench]]
name = "trie_node"
harness = false
