[package]
name = "kona-mpt"
description = "Utilities for interacting with and iterating through a merkle patricia trie"
version = "0.0.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# General
tracing.workspace = true
thiserror.workspace = true
derive_more = { workspace = true, features = ["full"] }

# Revm + Alloy
revm.workspace = true
alloy-rlp.workspace = true
alloy-trie.workspace = true
alloy-consensus.workspace = true
alloy-primitives = { workspace = true, features = ["rlp"] }

[dev-dependencies]
# Alloy
alloy-provider.workspace = true
alloy-consensus.workspace = true
alloy-transport-http.workspace = true
alloy-rpc-types = { workspace = true, features = ["eth"] }

# General
rand.workspace = true
anyhow.workspace = true
reqwest.workspace = true
futures.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["full"] }
criterion = { workspace = true, features = ["html_reports"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
pprof = { workspace = true, features = ["criterion", "flamegraph", "frame-pointer"] }

[[bench]]
name = "trie_node"
harness = false
