[package]
name = "kona-mpt"
description = "Utilities for interacting with and iterating through a merkle patricia trie"
version = "0.0.7"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# General
derive_more = { workspace = true, features = ["full"] }
serde = { workspace = true, optional = true, features = ["derive", "alloc"] }

# Revm + Alloy
alloy-rlp.workspace = true
alloy-trie.workspace = true
alloy-consensus.workspace = true
alloy-primitives = { workspace = true, features = ["rlp"] }

[dev-dependencies]
# Alloy
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-consensus.workspace = true
alloy-transport-http.workspace = true
alloy-rpc-types = { workspace = true, features = ["eth"] }

# General
rand.workspace = true
anyhow.workspace = true
reqwest.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["full"] }
criterion = { workspace = true, features = ["html_reports"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
pprof = { workspace = true, features = ["criterion", "flamegraph", "frame-pointer"] }

[features]
default = ["serde"]
serde = [
    "dep:serde",
    "alloy-primitives/serde",
    "alloy-trie/serde"
]

[[bench]]
name = "trie_node"
harness = false
